# tech-challenge-fase3

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
app/: assistant.py  demo.py  generate_flowchart_pngs.py  generate_report_docx.py  knowledge_base.py  main.py  models.py  protocols.py  retrieval.py  vector_store.py
app/chains/: __init__.py  assistant_chain.py
app/config/: __init__.py  settings.py
app/datasets/: README.md  __init__.py
app/graphs/: __init__.py  obstetric_graph.py  prevention_graph.py  state.py  triage_graph.py  violence_graph.py
app/security/: __init__.py  access_monitor.py  anonymizer.py  audit.py  crypto.py  risk.py  (+1 more)
data/: fine_tuning_manifest.json  finetuning_metrics.json  test.json  test.jsonl  train.json  train.jsonl  validation.json  validation.jsonl
data_pipeline/: __init__.py  anonymizer.py  formatter.py  loader.py  preprocess.py  validator.py
datasets/: README.md  generate_synthetic_datasets.py  synthetic_cases.json  synthetic_womens_health_knowledge.json
docs/: .~lock.relatorio_tecnico.docx#  relatorio_tecnico.docx  relatorio_tecnico.md  validacao_especialistas.md  ~$latorio_tecnico.docx
examples/: data_layer_examples.py  run_demos.py
prompts/: system_prompt.txt
tech_challenge_fase3_womens_health_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_assistant.py  test_data_pipeline.py  test_graphs.py  test_security.py  test_security_extended.py  test_validators.py
vectorstore/: __init__.py  embeddings.py  index.py
(+22 files in other folders)
